test/grammar/types/args/schema_types_err_05_kwargs/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:5:33
  |
5 | person = Person(data="Alice", n="1")
  |                                 ^ expected int, got str(1)
  |

 --> ${CWD}/main.k:1:26
  |
1 | schema Person[data: str, n: int]:
  |                          ^ variable is defined here, its type is int, but got str(1)
  |
